@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.954 2017/09/08 22:23:04 markd Exp $
+# $NetBSD: Makefile,v 1.955 2017/09/11 09:57:39 abs Exp $
 #
 
 COMMENT=	Text processing utilities (does not include desktop publishing)
@@ -578,7 +578,6 @@ SUBDIR+=	p5-Text-SimpleTable
 SUBDIR+=	p5-Text-SimpleTable-AutoWidth
 SUBDIR+=	p5-Text-Soundex
 SUBDIR+=	p5-Text-SpellChecker
-SUBDIR+=	p5-Text-Substitute
 SUBDIR+=	p5-Text-Table
 SUBDIR+=	p5-Text-Tabs+Wrap
 SUBDIR+=	p5-Text-TabularDisplay
