@@ -1,16 +1,0 @@
-# $NetBSD: Makefile,v 1.25 2017/09/03 08:37:01 wiz Exp $
-
-DISTNAME=		Text-Substitute-0.15
-PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		11
-CATEGORIES=		www perl5
-#MASTER_SITES=		http://www.mono.org/abs/tools/Text-Substitute/
-
-MAINTAINER=		abs@NetBSD.org
-#HOMEPAGE=		http://www.mono.org/abs/tools/Text-Substitute/
-COMMENT=		Perl5 module for text substitution from hashes
-
-PERL5_PACKLIST=		auto/Text/Substitute/.packlist
-
-.include "../../lang/perl5/module.mk"
-.include "../../mk/bsd.pkg.mk"
