@@ -1,1 +1,0 @@
-HTML::FixEntities converts latin1 entities to their equivalent HTML entities
