@@ -1,16 +1,0 @@
-# $NetBSD: Makefile,v 1.25 2017/09/03 08:37:02 wiz Exp $
-
-DISTNAME=		HTML-FixEntities-1.03
-PKGNAME=		p5-${DISTNAME}
-PKGREVISION=		11
-CATEGORIES=		www perl5
-#MASTER_SITES=		http://www.mono.org/abs/tools/HTML-FixEntities/
-
-MAINTAINER=		abs@NetBSD.org
-#HOMEPAGE=		http://www.mono.org/abs/tools/HTML-FixEntities/
-COMMENT=		Perl5 module to convert latin1 to equivalent HTML
-
-PERL5_PACKLIST=		auto/HTML/FixEntities/.packlist
-
-.include "../../lang/perl5/module.mk"
-.include "../../mk/bsd.pkg.mk"
