@@ -1,6 +1,0 @@
-$NetBSD: distinfo,v 1.6 2015/11/04 02:47:07 agc Exp $
-
-SHA1 (HTML-FixEntities-1.03.tar.gz) = 2dd8ef9afab0085b2ab905a0cfe46eadca0199ae
-RMD160 (HTML-FixEntities-1.03.tar.gz) = d238a3822dedc47880a7cde39009268a6850e070
-SHA512 (HTML-FixEntities-1.03.tar.gz) = 18baf0b763e25c1899f71e9c88b75869fb8166516b8df94e51cfb18f655424b5358bc7d03774ab26a9ed07bdaae64081596cf29d57a36c46fa27f71523409abb
-Size (HTML-FixEntities-1.03.tar.gz) = 3167 bytes
